--- a/index.html
+++ b/index.html
@@ -10,30 +10,30 @@
   <link href="css/main.css" rel="stylesheet">
 </head>
 <body>
-  <div class="grid gird-middle">
-    <div class="unit xs-1 s-1 m-1-2 l-1-2 unit-conent-center">
+  <div class="grid grid-middle">
+    <div class="unit xs-1 s-1 m-1-2 l-1-2 unit-content-center">
       <p class="tena">So you just gonna bring me a</p>
       <div class="birthday"><p class="tena">birthday</p>
       </div>
-    <div class="unit xs-1 s-1 m-1-2 l-1-2 unit-conent-center">
+    <div class="unit xs-1 s-1 m-1-2 l-1-2 unit-content-center">
       <p>gift on my</p>
       <div class="birthday">
         <p>birthday</p>
       </div>
     </div>
-    <div class="unit xs-1 s-1 m-1-2 l-1-2 unit-conent-center">
+    <div class="unit xs-1 s-1 m-1-2 l-1-2 unit-content-center">
       <p>to my</p>
       <div class="birthday">
         <p>birthday</p>
       </div>
     </div>
-    <div class="unit xs-1 s-1 m-1-2 l-1-2 unit-conent-center">
+    <div class="unit xs-1 s-1 m-1-2 l-1-2 unit-content-center">
       <p>party on my</p>
       <div class="birthday">
         <p>birthday</p>
       </div>
     </div>
-    <div class="unit xs-1 s-1 m-1-2 l-1-2 unit-conent-center">
+    <div class="unit xs-1 s-1 m-1-2 l-1-2 unit-content-center">
       <p>with a</p>
       <div class="birthday">
         <p>birthday</p>
